[gd_scene load_steps=5 format=3 uid="uid://dehptn2mrpb1x"]

[ext_resource type="Script" uid="uid://c785bi5n7ibj2" path="res://Scripts/flier.gd" id="1_dh7f1"]
[ext_resource type="Texture2D" uid="uid://jaegp53ccc7w" path="res://Assets/Spritesheet/platformPack_tilesheet.png" id="1_hujfc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwpgl"]
radius = 41.5
height = 83.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_suc2y"]
size = Vector2(120, 1546)

[node name="Flier" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_dh7f1")
patrol_speed = 200.0
patrol_acc = 450.0
dive_speed = 350.0
recovery_speed = 250.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 3.5)
shape = SubResource("CapsuleShape2D_qwpgl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_hujfc")
region_enabled = true
region_rect = Rect2(446.2661, 63.13703, 66.296875, 66.29693)

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(1, 710)
shape = SubResource("RectangleShape2D_suc2y")

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(-62, -1, -62, -50, -54, -60, 49, -60, 59, -51, 61, 52, 52, 61, -51, 60, -60, 53)

[node name="LeftBound" type="Marker2D" parent="."]
position = Vector2(-300, 0)

[node name="RightBound" type="Marker2D" parent="."]
position = Vector2(300, 0)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
